[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
sscanf = "0.4.1"
num = "0.4.1"
queues = "1.1.0"
cached = "0.46.1"
rayon = "1.8.0"
pathfinding = "4.8.0"

[profile.dev]
opt-level = 3